testsuite/tests/parser/should_fail/pfail052.alan
MulDimArray() : proc
  i : int [4][5];
{}
