testsuite/tests/parser/should_fail/pfail052.stderr
pfail052.alan:2:17: Error: Parse error on input `;'
	Alan doesn't support arrays bigger than one dimension
	Use -XMultiDimArrays if you want to enable this

